Lots of small bug fixes found by FindBugs static checker.